// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pager default renders properly 1`] = `
<ul
  class="pager"
>
  <li
    class="previous"
  >
    <a
      class=""
      href="#"
    >
      <svg
        aria-hidden="true"
        class="i"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
        />
      </svg>
      Previous
    </a>
  </li>
  <li
    class="next"
  >
    <a
      class=""
      href="#"
    >
      Next
      <svg
        aria-hidden="true"
        class="i"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
        />
      </svg>
    </a>
  </li>
</ul>
`;

exports[`Pager mini size renders properly 1`] = `
<ul
  class="pager pager-sm"
>
  <li
    class="disabled previous"
  >
    <a
      class="disabled"
      href="#"
    >
      <svg
        aria-hidden="true"
        class="i"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
        />
      </svg>
      The Previous Page
    </a>
  </li>
  <li
    class="disabled next"
  >
    <a
      class="disabled"
      href="#"
    >
      The Next Page
      <svg
        aria-hidden="true"
        class="i"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
        />
      </svg>
    </a>
  </li>
</ul>
`;
